# IVT_K

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  README.md  UPGRADE.md  _cr.txt  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  wsgi.py
alembic/: alembic.ini  env.py
alembic/versions/: 09354998e331_add_plasmid_size_bp_to_constructs.py  22ec2d6034b4_initial_schema.py  81915dfa5605_add_ligand_condition_to_wellassignment_.py  8ff2e5422fc8_add_protocol_history_fields_to_reaction_.py  a3b7c9e2f401_add_access_logs_table.py  add_exclude_from_fc_column.py  b078f506e286_merge_heads.py  b4f2a8c91d03_add_indexes_on_frequently_queried_fk_.py  c5d2a8e3f701_add_fit_reliability_metrics.py  d7e3b9c4f812_add_residual_autocorr_dw.py  d9354085474a_add_model_residuals_column_to_analysis_.py  f1a2b3c4d5e6_add_reagent_inventories.py  f1f38b8268cf_add_nm_targeting_columns_to_.py
app/: __init__.py  config.py  error_handler.py  errors.py  extensions.py  logging_config.py  theme.py
app/analysis/: __init__.py  bayesian.py  comparison.py  constants.py  curve_fitting.py  (+13 more)
deploy/: README.md  ivt-app.service  ivt-backup.service  ivt-backup.timer  ivt-inactivity-check.service  ivt-inactivity-check.timer  ivt-worker.service
help/: glossary.json  tooltips.json
plugins/: __init__.py
scripts/: archive_project.py  backfill_fit_reliability_metrics.py  backup.py  check_inactive_projects.py  init_db.py  repair_deleted_constructs.py  run_huey_worker.py  run_statistical_validation.py  seed_data.py  setup_environment.sh
tests/: __init__.py  conftest.py
(+295 files in other folders)
